test/should-fail/badstring.f3
/**
 * Ensure that malformed strings are caught nicely be the parser/lexer
 * @test/compile-error
 */

var v = "unterminated string
v = 'unterminated string
v = "{v} unterminated string
v = '{v} unterminated string


v = "{v   + x






